--- a/examples/programmatic_init.html
+++ b/examples/programmatic_init.html
@@ -16,45 +16,39 @@
 </head>
 
 <body>
-    <myscript-common-element unloaded/>
+    <myscript-common-element unloaded />
 </body>
 <script>
     window.addEventListener('load', () => {
-        let configurationChanged = false;
         const commonElement = document.querySelector('myscript-common-element');
-        commonElement.addEventListener('load', () => {
-            if (!configurationChanged) {
-                console.log('All resources finished loading! Starting to init myscript-common-element');
-                // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
-                const configuration = {
-                    type: 'MATH',
-                    scheme: 'https',
-                    host: 'webdemoapi.myscript.com',
-                    applicationKey: '515131ab-35fa-411c-bb4d-3917e00faf60',
-                    hmacKey: '54b2ca8a-6752-469d-87dd-553bb450e9ad'
-                };
-                // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
-                commonElement.setAttribute('type', configuration.type);
-                commonElement.setAttribute('scheme', configuration.scheme);
-                commonElement.setAttribute('host', configuration.host);
-                commonElement.applicationkey = configuration.applicationKey;
-                commonElement.hmackey = configuration.hmacKey;
-                // Testing if custom configuration is taken into account
-                commonElement.configuration = {
-                    recognitionParams: {
-                        v3: {
-                            mathParameter: {
-                                resultTypes: ['LATEX'],
-                                userResources: []
-                            }
-                        }
+        console.log('All resources finished loading! Starting to init myscript-common-element');
+        // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
+        const configuration = {
+            type: 'MATH',
+            scheme: 'https',
+            host: 'webdemoapi.myscript.com',
+            applicationKey: '515131ab-35fa-411c-bb4d-3917e00faf60',
+            hmacKey: '54b2ca8a-6752-469d-87dd-553bb450e9ad'
+        };
+        // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
+        commonElement.setAttribute('type', configuration.type);
+        commonElement.setAttribute('scheme', configuration.scheme);
+        commonElement.setAttribute('host', configuration.host);
+        commonElement.applicationkey = configuration.applicationKey;
+        commonElement.hmackey = configuration.hmacKey;
+        // Testing if custom configuration is taken into account
+        commonElement.configuration = {
+            recognitionParams: {
+                v3: {
+                    mathParameter: {
+                        resultTypes: ['LATEX'],
+                        userResources: []
                     }
-                };
-                // Force the component to reload with the new configuration
-                commonElement.unloaded = true;
+                }
             }
-            configurationChanged = true;
-        });
+        };
+        // Force the component to reload with the new configuration
+        commonElement.unloaded = false;
     });
 </script>
 
