--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -384,7 +384,8 @@ Custom property | Description | Default
                      * The underlying editor created with MyScriptJS. This could allow to access more advanced properties. Mostly used for automatic testing currently.
                      */
                     editor: {
-                        type: Object
+                        type: Object,
+                        notify: true
                     },
                     /**
                      * Set the additional configuration used to feed MyScript ink Paper (Structure of object as defined in MyScriptJS DefaultConfiguration.js file)
@@ -730,20 +731,17 @@ Custom property | Description | Default
 
             connectedCallback() {
                 super.connectedCallback();
-                this.logger.info('common-element attached callback');
                 this.addEventListener('iron-resize', this._resizeListener);
-
                 this.editorDomElement = this.shadowRoot.querySelector('#editorDomElement');
                 this.paperToast = this.shadowRoot.querySelector('paper-toast');
                 this._unloadedChanged(this.unloaded);
-                this.logger.info('common-element attached');
+                this.logger.info('common-element connected');
             }
 
             disconnectedCallback() {
-                this.logger.info('common-element detached callback');
                 super.disconnectedCallback();
                 this.removeEventListener('iron-resize', this._resizeListener);
-                this.logger.info('common-element detached');
+                this.logger.info('common-element disconnected');
             }
 
             /**
@@ -822,10 +820,12 @@ Custom property | Description | Default
                     if (this.editor) {
                         this.editor.configuration = this._buildConfiguration();
                     } else {
-                        this.editor = MyScript.register(this.editorDomElement,
-                                                        this._buildConfiguration(),
-                                                        MyScriptCommonElement._generatePenStyle(this.pencolor, this.penwidth),
-                                                        MyScriptCommonElement._generateTheme(this.fontfamily, this.fontsize));
+                        Polymer.RenderStatus.beforeNextRender(this, () => {
+                            this.editor = MyScript.register(this.editorDomElement,
+                                                            this._buildConfiguration(),
+                                                            MyScriptCommonElement._generatePenStyle(this.pencolor, this.penwidth),
+                                                            MyScriptCommonElement._generateTheme(this.fontfamily, this.fontsize));
+                        });
                     }
                 }
             }
