[FIX] fixes initialized property

--- a/examples/v4/index.html
+++ b/examples/v4/index.html
@@ -2,31 +2,21 @@
 <html>
 
 <head>
+    <!-- Those three meta make the capture of handwriting inputs easier on modile devices -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <!-- Those three meta make the capture of handwriting inputs easier on modile devices -->
-    <title>myscript-common-element demo</title>
+
+    <title>Get started with iink</title>
+
+    <link rel="stylesheet" href="../examples.css">
 
     <!-- As web components are not fully support -->
-    <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="stylesheet" href="../examples.css">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
     <!-- myscript-common-element is import to be used later -->
     <link rel="import" href="../../myscript-common-element.html">
     <!-- we use a paper toast for the purpose of this demo -->
     <link rel="import" href="../../../paper-toast/paper-toast.html">
-
-
-    <style>
-        body {
-            margin: 0;
-            height: 95vh;
-        }
-
-        myscript-common-element {
-            height: 100%;
-        }
-    </style>
 </head>
 
 <body>
