[FIX] fixes change_language example

--- a/examples/v4/change_language.html
+++ b/examples/v4/change_language.html
@@ -10,16 +10,16 @@
 
     <title>Change language</title>
 
-    <link rel="stylesheet" href="examples.css">
+    <link rel="stylesheet" href="../examples.css">
     <style>
         myscript-common-element {
             height: calc(100% - 2.625rem);
         }
     </style>
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-languages-element.html">
-    <link rel="import" href="../myscript-common-element.html">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../../myscript-languages-element.html">
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
 <body>
     <myscript-languages-element scheme="https"
