--- a/examples/dev/debug.html
+++ b/examples/dev/debug.html
@@ -9,10 +9,10 @@
 
     <title>Activate debugger</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../examples.css">
 
-    <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-common-element.html">
+    <script src="../../../webcomponentsjs/webcomponents-loader.js"></script>
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
 
 <body>
