--- a/examples/index.html
+++ b/examples/index.html
@@ -13,58 +13,65 @@
 </head>
 
 <body>
-<h1>Examples</h1>
-<h2>V4 - iink SDK web</h2>
-<ul>
-    <li>
-        <a href="v4/index.html">Getting started MATH with iink SDK web</a>
-    </li>
-    <li>
-        <a href="v4/exporting_on_demand.html">Exporting the recognized content on demand</a>
-    </li>
-    <li>
-        <a href="v4/customizing_style.html">Customizing the style of editor with iink SDK web</a>
-    </li>
-</ul>
-<h2>V3 - CDK v3.2</h2>
-<ul>
-    <li>
-        <a href="v3/index.html">Getting started SHAPE with CDK 3.2 REST/HTTP</a>
-    </li>
-    <li>
-        <a href="v3/customizing_style.html">Customizing the style of editor with CDK 3.2</a>
-    </li>
-    <li>
-        <a href="v3/handling_exports.html">Handling exports with CDK 3.2</a>
-    </li>
-</ul>
-<h2>Shared features</h2>
-<div>Demonstration of features not depending of API version configured.</div>
-<ul>
-    <li>
-        <a href="handling_errors.html">Handling errors</a>
-    </li>
-    <li>
-        <a href="programmatic_init.html">Set the configuration in Javascript and not with attributes</a>
-    </li>
-    <li>
-        <a href="get_stats.html">Grab the statistics of input</a>
-    </li>
-    <li>
-        <a href="myscript-languages-element/get_languages.html">Select input populate with the list of supported languages.</a>
-    </li>
-    <li>
-        <a href="myscript-languages-element/get_languages_programmatic.html">
+    <h1>Examples</h1>
+    <h2>V4 - iink SDK web</h2>
+    <ul>
+        <li>
+            <a href="v4/index.html">Getting started MATH with iink SDK web</a>
+        </li>
+        <li>
+            <a href="v4/exporting_on_demand.html">Exporting the recognized content on demand</a>
+        </li>
+        <li>
+            <a href="v4/customizing_style.html">Customizing the style of editor with iink SDK web</a>
+        </li>
+        <li>
+            <a href="v4/change_language.html">Dynamicly change the language</a>
+        </li>
+        <li>
+            <a href="v4/programmatic_init.html">Settings the attributes programmaticly</a>
+        </li>
+    </ul>
+    <h2>V3 - CDK v3.2</h2>
+    <ul>
+        <li>
+            <a href="v3/index.html">Getting started SHAPE with CDK 3.2 REST/HTTP</a>
+        </li>
+        <li>
+            <a href="v3/customizing_style.html">Customizing the style of editor with CDK 3.2</a>
+        </li>
+        <li>
+            <a href="v3/handling_exports.html">Handling exports with CDK 3.2</a>
+        </li>
+        <li>
+            <a href="v3/programmatic_init.html">Settings the attributes programmaticly</a>
+        </li>
+    </ul>
+    <h2>Non version specific features</h2>
+    <div>Demonstration of features not depending of API version configured.</div>
+    <ul>
+        <li>
+            <a href="non-version-specific/handling_errors.html">Handling errors</a>
+        </li>
+
+        <li>
+            <a href="non-version-specific/get_languages.html">Select input populate with the list of supported languages.</a>
+        </li>
+        <li>
+            <a href="non-version-specific/get_languages_programmatic.html">
             Select input populate with the list of supported languages configured in Javascript.
         </a>
-    </li>
-</ul>
-<h2>Development</h2>
-<ul>
-    <li>
-        <a href="dev/debug.html">Configuring debug component in debug mode</a>
-    </li>
-</ul>
+        </li>
+    </ul>
+    <h2>Development</h2>
+    <ul>
+        <li>
+            <a href="dev/debug.html">Configuring debug component in debug mode</a>
+        </li>
+        <li>
+            <a href="dev/get_stats.html">Grab the statistics of input</a>
+        </li>
+    </ul>
 </body>
 
 </html>
