--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -216,6 +216,7 @@ Custom property | Description | Default
         </nav>
         <div id="editorDomElement"
              class="ms-editor"
+             on-loaded="_changeListener"
              on-change="_changeListener"
              on-exported="_exportedListener"
              on-converted="_convertedListener"
@@ -235,6 +236,11 @@ Custom property | Description | Default
             static get is() {
                 return 'myscript-common-element';
             }
+
+            /**
+             * Fired when editor is loaded.
+             * @event loaded
+             */
 
             /**
              * Fired when undo is triggered.
