[FIX] fixes on get stats

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -216,6 +216,7 @@ Custom property | Description | Default
         </nav>
         <div id="editorDomElement"
              class="ms-editor"
+             on-idle="_idleListener"
              on-loaded="_changeListener"
              on-change="_changeListener"
              on-exported="_exportedListener"
@@ -225,7 +226,6 @@ Custom property | Description | Default
              on-clear="_forwardListener"
              on-export="_forwardListener"
              on-convert="_forwardListener"
-             on-idle="_forwardListener"
              on-error="_errorListener">
         </div>
         <paper-toast class="fit-bottom"></paper-toast>
@@ -236,6 +236,11 @@ Custom property | Description | Default
             static get is() {
                 return 'myscript-common-element';
             }
+
+            /**
+             * Fired when editor is idle.
+             * @event idle
+             */
 
             /**
              * Fired when editor is loaded.
@@ -547,6 +552,14 @@ Custom property | Description | Default
                         notify: true
                     },
                     /**
+                     * True if component is idle
+                     */
+                    idle: {
+                        type: Boolean,
+                        value: true,
+                        notify: true
+                    },
+                    /**
                      * True to display console output, false otherwise.
                      */
                     debug: {
@@ -667,6 +680,16 @@ Custom property | Description | Default
                     this.canredo = event.detail.canRedo;
                     this.canexport = event.detail.canExport;
                     this.canconvert = event.detail.canConvert;
+                }
+                // Just forwarding event there.
+                this.dispatchEvent(new CustomEvent(event.type, {
+                    detail: event.detail
+                }));
+            }
+
+            _idleListener(event) {
+                if (event.detail) {
+                    this.idle = event.detail.idle;
                 }
                 // Just forwarding event there.
                 this.dispatchEvent(new CustomEvent(event.type, {
@@ -801,7 +824,7 @@ Custom property | Description | Default
              */
             getStats() {
                 if (this.editor) {
-                    return this.editor.stats;
+                    return this.editor.getStats();
                 }
             }
 
