--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -89,7 +89,6 @@ CSS variable | Default
                 position: relative;
                 min-height: 200px;
                 min-width: 200px;
-                background: var(--myscript-common-element-background);
                 background-size: cover;
                 color: var(--myscript-common-element-color);
                 z-index: 0;
@@ -105,11 +104,10 @@ CSS variable | Default
             }
 
             nav {
-                position: inherit;
-                float: left;
                 display: flex;
                 display: -webkit-flex;
                 z-index: 25;
+                border-top: 1px solid #F5F6F7;
             }
 
             paper-fab {
@@ -117,10 +115,15 @@ CSS variable | Default
             }
 
             .ms-editor {
-                position: absolute;
-                height: 100%;
+                position: relative;
+                height: calc(100% - 53px);
                 width: 100%;
                 z-index: 20;
+                background: var(--myscript-common-element-background);
+            }
+
+            nav[hidden] + .ms-editor {
+                height: calc(100%);
             }
 
             .ms-editor canvas,
@@ -180,12 +183,6 @@ CSS variable | Default
              on-loaded="_changeListener"
              on-change="_changeListener"
              on-exported="_exportedListener"
-             on-converted="_convertedListener"
-             on-undo="_forwardListener"
-             on-redo="_forwardListener"
-             on-clear="_forwardListener"
-             on-export="_forwardListener"
-             on-convert="_forwardListener"
              on-error="_errorListener">
         </div>
         <paper-toast class="fit-bottom"></paper-toast>
@@ -633,35 +630,16 @@ CSS variable | Default
                     this.canexport = event.detail.canExport;
                     this.canconvert = event.detail.canConvert;
                 }
-                // Just forwarding event there.
-                this.dispatchEvent(new CustomEvent(event.type, {
-                    detail: event.detail
-                }));
             }
 
             _idleListener(event) {
                 if (event.detail) {
                     this.idle = event.detail.idle;
                 }
-                // Just forwarding event there.
-                this.dispatchEvent(new CustomEvent(event.type, {
-                    detail: event.detail
-                }));
             }
 
             _exportedListener(event) {
                 this.exports = event.detail ? event.detail.exports : {};
-                // Just forwarding event there.
-                this.dispatchEvent(new CustomEvent(event.type, {
-                    detail: event.detail
-                }));
-            }
-
-            _forwardListener(event) {
-                // Just forwarding event there.
-                this.dispatchEvent(new CustomEvent(event.type, {
-                    detail: event.detail
-                }));
             }
 
             _errorListener(event) {
@@ -670,10 +648,6 @@ CSS variable | Default
                     this.paperToast.text = event.detail.message;
                     this.paperToast.fitIn = this.paperToast.show();
                 }
-                // Just forwarding event there.
-                this.dispatchEvent(new CustomEvent(event.type, {
-                    detail: event.detail
-                }));
             }
 
             constructor() {
@@ -701,7 +675,6 @@ CSS variable | Default
 
             disconnectedCallback() {
                 super.disconnectedCallback();
-                this.editor.grabber.detach(this, this.editor.grabberContext);
                 this.removeEventListener('iron-resize', this._resizeListener);
                 this.logger.info('common-element disconnected');
             }
@@ -815,9 +788,6 @@ CSS variable | Default
                                 this._buildConfiguration(),
                                 MyScriptCommonElement._generatePenStyle(this.penstyle, this.pencolor, this.penwidth),
                                 MyScriptCommonElement._generateTheme(this.theme, this.themecolor, this.themewidth));
-
-                            this.editor.grabber.detach(this.editor.domElement, this.editor.grabberContext);
-                            this.editor.grabberContext = this.editor.grabber.attach(this, this.editor);
                         });
                     }
                 }
