--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -498,6 +498,10 @@ CSS variable | Default
                         type: Boolean,
                         value: false,
                         reflectToAttribute: true
+                    },
+                    'touch-action': {
+                        type: String,
+                        value: 'initial'
                     }
                 }
             }
@@ -605,9 +609,9 @@ CSS variable | Default
             static _extractPoint(event, configuration) {
                 const rect = event.target.getBoundingClientRect();
                 return {
-                    x: MyScriptCommonElement._roundFloat(event.detail.x - rect.left - event.target.clientLeft, configuration.xyFloatPrecision),
-                    y: MyScriptCommonElement._roundFloat(event.detail.y - rect.top - event.target.clientTop, configuration.xyFloatPrecision),
-                    t: MyScriptCommonElement._roundFloat(event.timeStamp, configuration.timestampFloatPrecision)
+                    x: MyScriptCommonElement._roundFloat((event.detail.x || event.clientX) - rect.left - event.target.clientLeft, configuration.xyFloatPrecision),
+                    y: MyScriptCommonElement._roundFloat((event.detail.y || event.clientY) - rect.top - event.target.clientTop, configuration.xyFloatPrecision),
+                    t: MyScriptCommonElement._roundFloat(event.timeStamp || Date.now(), configuration.timestampFloatPrecision)
                 };
             };
 
@@ -719,25 +723,33 @@ CSS variable | Default
                     }
                 };
 
+                const pointerListeners = [{
+                    types: ['pointerdown'],
+                    listener: pointerDownHandler
+                }, {
+                    types: ['pointermove'],
+                    listener: pointerMoveHandler
+                }, {
+                    types: ['pointerup', 'pointerout', 'pointerleave', 'pointercancel'],
+                    listener: pointerUpHandler
+                }];
+
+                const polymerGestureListeners = [{
+                    types: ['track'],
+                    listener: handleTrack
+                }, {
+                    types: ['tap'],
+                    listener: handleTap
+                }];
+
                 const context = {
                     options: editor.configuration.listenerOptions,
-                    listeners: [{
-                        types: ['track'],
-                        listener: handleTrack
-                    }, {
-                        types: ['tap'],
-                        listener: handleTap
-                    }, {
-                        types: ['pointerdown'],
-                        listener: pointerDownHandler
-                    }, {
-                        types: ['pointermove'],
-                        listener: pointerMoveHandler
-                    }, {
-                        types: ['pointerup', 'pointerout', 'pointerleave', 'pointercancel'],
-                        listener: pointerUpHandler
-                    }]
+                    listeners: this['touch-action'] === 'none' ? pointerListeners : polymerGestureListeners
                 };
+
+                if (this.debug) {
+                    context.listeners.push();
+                }
 
                 this.logger.debug('attaching listeners', context);
                 context.listeners.forEach((item) => {
