[DEV] Border top added to editor

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -102,6 +102,7 @@ CSS variable | Default
                 color: var(--myscript-common-element-color);
                 z-index: 0;
                 font-family: sans-serif;
+                border-top: 1px solid #D7DDE3; /*#A9B7C5*/
             }
 
             :host * {
