[FIX] fixes issue with polymer GestureManager

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -667,29 +667,19 @@ CSS variable | Default
             }
 
             _attachGrabber(element, editor) {
-                const handleTrack = (evt) => {
-                    this.logger.debug('event', evt);
 
-                    switch (evt.detail.state) {
-                        case 'start':
-                            editor.pointerDown(MyScriptCommonElement._extractPoint(evt, editor.configuration));
-                            break;
-                        case 'track':
-                            editor.pointerMove(MyScriptCommonElement._extractPoint(evt, editor.configuration));
-                            break;
-                        case 'end':
-                            editor.pointerUp(MyScriptCommonElement._extractPoint(evt, editor.configuration));
-                            break;
+                const patchPointerEvent = (evt) => {
+                    if (!evt.pointerId) {
+                        evt.pointerId = 0;
                     }
-                };
-
-                const handleTap = (evt) => {
-                    this.logger.debug('event', evt);
-                    editor.pointerDown(MyScriptCommonElement._extractPoint(evt, editor.configuration));
-                    editor.pointerUp(MyScriptCommonElement._extractPoint(evt, editor.configuration));
+                    if (!evt.pointerType) {
+                        evt.pointerType = 'pen';
+                    }
+                    return evt;
                 };
 
                 const pointerDownHandler = (evt) => { // Trigger a pointerDown
+                    patchPointerEvent(evt);
                     if (this.activePointerId) {
                         if (this.activePointerId === evt.pointerId) {
                             this.logger.warn(`${evt.type} event with the same id without any pointer up`, evt.pointerId);
@@ -702,6 +692,7 @@ CSS variable | Default
                 };
 
                 const pointerMoveHandler = (evt) => { // Trigger a pointerMove
+                    patchPointerEvent(evt);
                     // Only considering the active pointer
                     if (this.activePointerId && this.activePointerId === evt.pointerId) {
                         evt.stopPropagation();
@@ -712,6 +703,7 @@ CSS variable | Default
                 };
 
                 const pointerUpHandler = (evt) => { // Trigger a pointerUp
+                    patchPointerEvent(evt);
                     // Only considering the active pointer
                     if (this.activePointerId && this.activePointerId === evt.pointerId) {
                         this.activePointerId = undefined; // Managing the active pointer
@@ -734,11 +726,14 @@ CSS variable | Default
                 }];
 
                 const polymerGestureListeners = [{
+                    types: ['down'],
+                    listener: pointerDownHandler
+                },{
                     types: ['track'],
-                    listener: handleTrack
+                    listener: pointerMoveHandler
                 }, {
-                    types: ['tap'],
-                    listener: handleTap
+                    types: ['up'],
+                    listener: pointerUpHandler
                 }];
 
                 const context = {
@@ -753,7 +748,7 @@ CSS variable | Default
                 this.logger.debug('attaching listeners', context);
                 context.listeners.forEach((item) => {
                     item.types.forEach(type => {
-                        if (['track', 'tap'].includes(type)) {
+                        if (['down', 'track', 'up'].includes(type)) {
                             Polymer.Gestures.addListener(element, type, item.listener);
                         } else {
                             element.addEventListener(type, item.listener, context.options);
