[FIX] Clear button was not disabled after clear

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -656,6 +656,8 @@ CSS variable | Default
 
             _exportedListener(event) {
                 this.exports = event.detail ? event.detail.exports : {};
+                if (this.apiversion === 'V4')
+                    this.canclear = this.exports[Object.keys(this.exports)[0]] !== '';
             }
 
             _errorListener(event) {
