[FIX] Grid in iOS

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -89,7 +89,7 @@ CSS variable | Default
 
             .ms-editor canvas.ms-rendering-canvas,
             .ms-editor svg {
-                background: var(--myscript-common-element-line-pattern);
+                @apply --myscript-common-element-line-pattern;
             }
 
             .ms-editor canvas.ms-capture-canvas {
