[FIX] Typo in common element

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -36,7 +36,7 @@ CSS variable | Default
 @demo examples/v3/rest_text.html Configure component with legacy api [V3]
 @demo examples/index.html Other demonstrations
 -->
-<dom-module id="myscript-common-element">git add
+<dom-module id="myscript-common-element">
     <template>
         <style include="myscript-stylesheet">
             :host {
