[DEV] Manage smart guide behavior with pointer events and polymer gestures

--- a/myscript-stylesheet.html
+++ b/myscript-stylesheet.html
@@ -24,9 +24,8 @@ CSS variable | Default
                 --myscript-editor-focus-color: #0798FF;
                 --myscript-editor-disabled-color: #F5F6F7;
                 --myscript-editor-line-pattern: {
-                    background-image:
-                        linear-gradient(to right, #F5F6F7 1px, transparent 1px),
-                        linear-gradient(to bottom, #F5F6F7 1px, transparent 1px);
+                    background-image: linear-gradient(to right, #F5F6F7 1px, transparent 1px),
+                    linear-gradient(to bottom, #F5F6F7 1px, transparent 1px);
                     background-size: 18px 18px;
                 };
                 --myscript-editor-capture-background: none;
@@ -65,7 +64,7 @@ CSS variable | Default
                 };
 
                 --myscript-icon-button: {
-                    @apply  --myscript-button;
+                    @apply --myscript-button;
                     border-radius: 50%;
                     width: 40px;
                 };
