--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -676,19 +676,7 @@ CSS variable | Default
                     return evt;
                 };
 
-                const checkHover = (evt) => {
-                    const smartGuideIds = ['smartguide', 'prompter-text-container', 'prompter-text', 'tag-icon', 'ellipsis'];
-                    const scrollbarClasses = ['ps__rail-x', 'ps__thumb-x'];
-                    if (!this.usepointerlisteners && evt.detail.hover()) {
-                        const evtId = evt.detail.hover().id;
-                        // Check if pointer entered into any smart guide elements or scrollbar
-                        const pointerEnteredSmartGuide = smartGuideIds.includes(evtId) || scrollbarClasses.includes(evt.detail.hover().className);
-                        // Check if pointer moved between words in smart guide
-                        const pointerMovedWords = evt.detail.hover().tagName === 'SPAN' || evt.detail.hover().tagName === 'SPAN';
-                        return evt.detail.hover().id === 'editorDomElement' || evt.detail.hover().className.includes('ms-canvas') || pointerEnteredSmartGuide || pointerMovedWords;
-                    }
-                    return false;
-                };
+
 
                 const pointerDownHandler = (evt) => { // Trigger a pointerDown
                     patchPointerEvent(evt);
@@ -710,7 +698,39 @@ CSS variable | Default
                 const pointerMoveHandler = (evt) => { // Trigger a pointerMove
                     patchPointerEvent(evt);
                     // Only considering the active pointer
-                    if ((this.usepointerlisteners || checkHover(evt)) && this.activePointerId && this.activePointerId === evt.pointerId) {
+                    if (this.activePointerId && this.activePointerId === evt.pointerId) {
+                        editor.pointerMove(MyScriptCommonElement._extractPoint(evt, element, editor.configuration));
+                    } else if (smartGuidePointerDown) {
+                        const point = MyScriptCommonElement._extractPoint(evt, element, editor.configuration);
+                        if (point.y >= downSmartGuidePoint.y + 5 && (point.x >= downSmartGuidePoint.x - 10 && point.x <= downSmartGuidePoint.x + 10)) {
+                            this.activePointerId = evt.pointerId;
+                            // Hack for iOS 9 Safari : pointerId has to be int so -1 if > max value
+                            const pointerId = evt.pointerId > 2147483647 ? -1 : evt.pointerId;
+                            unFocus();
+                            editor.pointerDown(downSmartGuidePoint, evt.pointerType, pointerId);
+                        }
+                    }
+                };
+
+                const polymerPointerMoveHandler = (evt) => { // Trigger a pointerMove
+
+                    const checkHover = (evt) => {
+                        const smartGuideIds = ['smartguide', 'prompter-text-container', 'prompter-text', 'tag-icon', 'ellipsis'];
+                        const scrollbarClasses = ['ps__rail-x', 'ps__thumb-x'];
+                        if (evt.detail.hover()) {
+                            const evtId = evt.detail.hover().id;
+                            // Check if pointer entered into any smart guide elements or scrollbar
+                            const pointerEnteredSmartGuide = smartGuideIds.includes(evtId) || scrollbarClasses.some((v) => evt.detail.hover().className.indexOf(v) >= 0);
+                            // Check if pointer moved between words in smart guide
+                            const pointerMovedWords = evt.detail.hover().tagName === 'SPAN' || evt.detail.hover().tagName === 'SPAN';
+                            return evt.detail.hover().id === 'editorDomElement' || evt.detail.hover().className.includes('ms-canvas') || pointerEnteredSmartGuide || pointerMovedWords;
+                        }
+                        return false;
+                    };
+
+                    patchPointerEvent(evt);
+                    // Only considering the active pointer
+                    if (checkHover(evt) && this.activePointerId && this.activePointerId === evt.pointerId) {
                         evt.stopPropagation();
                         editor.pointerMove(MyScriptCommonElement._extractPoint(evt, element, editor.configuration));
                     } else if (smartGuidePointerDown) {
@@ -731,6 +751,28 @@ CSS variable | Default
                 };
 
                 const pointerUpHandler = (evt) => { // Trigger a pointerUp
+                    patchPointerEvent(evt);
+                    smartGuidePointerDown = false;
+                    const smartGuideIds = ['smartguide', 'prompter-text-container', 'prompter-text', 'tag-icon', 'ellipsis'];
+                    const scrollbarClasses = ['ps__rail-x', 'ps__thumb-x'];
+                    // Check if pointer entered into any smartguide elements or scrollbar
+                    const pointerEnteredSmartGuide = evt.relatedTarget && (smartGuideIds.includes(evt.relatedTarget.id) || scrollbarClasses.includes(evt.relatedTarget.className));
+                    // Check if pointer didn't stay in the smartguide and pointer exited the smartguide or scrollbar
+                    const pointerExitedSmartGuide = evt.relatedTarget && evt.target && (smartGuideIds.includes(evt.target.id) || scrollbarClasses.includes(evt.target.className));
+                    // Check if pointer moved between words in smartguide
+                    const pointerMovedWords = evt.relatedTarget && evt.target && (evt.target.tagName === 'SPAN' || evt.relatedTarget.tagName === 'SPAN');
+                    if (pointerEnteredSmartGuide || pointerExitedSmartGuide || pointerMovedWords) {
+                        evt.stopPropagation();
+                    } else if (this.activePointerId && this.activePointerId === evt.pointerId) { // Only considering the active pointer
+                        this.activePointerId = undefined; // Managing the active pointer
+                        evt.stopPropagation();
+                        editor.pointerUp(MyScriptCommonElement._extractPoint(evt, element, editor.configuration));
+                    }else {
+                        this.logger.trace(`${evt.type} event from another pointerid (${evt.pointerId})`, this.activePointerId);
+                    }
+                };
+
+                const polymerPointerUpHandler = (evt) => { // Trigger a pointerUp
                     patchPointerEvent(evt);
                     smartGuidePointerDown = false;
                     if (this.activePointerId && this.activePointerId === evt.pointerId) { // Only considering the active pointer
@@ -758,10 +800,10 @@ CSS variable | Default
                     listener: pointerDownHandler
                 }, {
                     types: ['track'],
-                    listener: pointerMoveHandler
+                    listener: polymerPointerMoveHandler
                 }, {
                     types: ['up'],
-                    listener: pointerUpHandler
+                    listener: polymerPointerUpHandler
                 }];
 
                 const context = {
